# algorithmic-trading

./: .gitignore  .python-version  README.md  probe.py  pyproject.toml  pyrightconfig.json  requirements.txt
src/: lstm_strategy.py  strategy.py  test.py  test_lstm.py
src/bokeh/: test_bokeh.html  test_bokeh.py
src/lstm/: lstm_strategy.py  test_lstm.html  test_lstm.py
src/strategy/: strategy.py
src/utils/: fetch_data.py  visualise.py
